changed background color

--- a/index.css
+++ b/index.css
@@ -48,7 +48,7 @@
 
 body {
   margin: 0;
-  background: #00d0a6;
+  background: #dc8e10;
   color: white;
   font-family: sans-serif;
   display: flex;
