Change background color to green

--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
 
 body {
   margin: 0;
-  background: #966516;     /* BACKGROUND COLOR HERE */
+  background: #4dff00;     /* BACKGROUND COLOR HERE */
   color: white;
   font-family: sans-serif;
   display: flex;
